# GameOct

./: .gitignore  README.md
temp/: CMakeLists.txt  EXPANSION_SUMMARY.md  FPS_OPENWORLD_INTEGRATION.md  FPS_OPENWORLD_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENT_PROPOSALS.md  PHASE6_COMPLETE_GUIDE.md  PHASE6_FINAL_REPORT.md  POST_PROCESSING_COMPLETE.md  POST_PROCESSING_IMPLEMENTATION_REPORT.md  PROJECT_RESUME.md  PROJECT_SUMMARY.md  README.md  RECOMMENDATIONS_FOR_EXPANSION.md  RENDERLIB_FINAL.md  SESSION_SUMMARY.md  TECHNICAL_ACHIEVEMENTS.md  VEGETATION_MIRRORWATER.md  verify_installation.sh
temp/RenderLib/: AtmosphereRenderer.cpp  BloomPostProcess.hpp  ColorGrading.cpp  ColorGrading.hpp  EdgeDetection.cpp  GPUCuller.cpp  LODGroup.cpp  LODGroup.hpp  Mesh.cpp  MirrorWater.cpp  MirrorWater.hpp  ParallaxMapper.hpp  ReflectionProbe.cpp  RenderLib.hpp  Renderer.cpp  Renderer.hpp  SSIL.cpp  Sampler.cpp  Sampler.hpp  Shader.hpp  ShadowScheduler.hpp  SunEffects.cpp  SunEffects.hpp  TemporalFilter.hpp  TemporalSSAO.cpp  TemporalSSAO.hpp  Terrain.cpp  UBO.hpp  Vegetation.hpp  VolumetricLighting.cpp  Water.hpp  WindSystem.cpp  gpu_cull_test.cpp  post_processing_example.cpp
temp/examples/: fps_openworld_a.cpp  fps_openworld_c.cpp  fps_openworld_mirror_water.cpp  fps_openworld_vegetation.cpp
temp/shaders/: basic.frag  basic.vert  basic_advanced_soft.frag  blur.frag  color_grade.frag  decal.frag  edge_composite.frag  edge_detect.frag  extract_bright.frag  fog.frag  fog.vert  gpu_cull.geom  gpu_cull.vert  grass.frag  grass.vert  imposter.frag  imposter.vert  lens_flare.frag  (+23 more)
(+220 files in other folders)
